--- a/AndroidApp/app/src/main/res/layout/activity_main.xml
+++ b/AndroidApp/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
         android:indeterminate="false"
         android:max="500"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -51,4 +49,25 @@
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/titleTextView"
         app:layout_constraintStart_toStartOf="@+id/titleTextView" />
+
+    <Switch
+        android:id="@+id/turnMachineOnSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:checked="false"
+        android:text="Automatically turn washing machine on"
+        app:layout_constraintEnd_toEndOf="@+id/seekBar"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="@+id/seekBar"
+        app:layout_constraintTop_toBottomOf="@+id/seekBar" />
+
+    <TextView
+        android:id="@+id/washingMachineStatusLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:text="Washing machine is OFF"
+        app:layout_constraintBottom_toTopOf="@+id/selectedPriceLabel"
+        app:layout_constraintStart_toStartOf="@+id/selectedPriceLabel" />
 </androidx.constraintlayout.widget.ConstraintLayout>
